--- a/Codigo/front-end/src/styles.css
+++ b/Codigo/front-end/src/styles.css
@@ -98,6 +98,9 @@ button:not(:disabled) {
   border: solid 1px #0d6efd;
 }
 
+.only-printable {
+  display: none;
+}
 
 
 @media print {
@@ -112,31 +115,51 @@ button:not(:disabled) {
   }
 
   .list-container {
-  background: rgb(0, 0, 0, 0);
+    max-width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    box-shadow: 0px 0px 0px 0 rgba(0, 0, 0, 0.10);
   }
 
-  body, app-btn-custom, .not-printable {
-    visibility: hidden;
-    width: 0;
-    height: 0;
-  }
-
-  .not-printable {
+  .btn {
     display: none;
   }
 
-  .only-printable {
-    display: block;
+  .not-printable {
+    display: none !important;
   }
 
-  .printable {
-    visibility: visible;
-    position: absolute;
-    top: 30px;
-    left: 0;
-    right: 0;
-    margin: auto;
+  .navbar {
+    display: flex;
+    border-bottom: 1px solid rgb(173, 173, 173) !important;
+    margin-bottom: 2rem !important;
+    justify-content: center;
+  }
+
+  .only-printable {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .container.card {
+    margin-right: 0;
+    margin-left: 0;
+  }
+  
+  .row {
+    margin-right: 0;
+    margin-left: 0;
+  }
+  
+  .container {
+    max-width: 100%;
+  }
+
+  .specific-container {
+    margin-top: -2rem !important;
   }
 
 }
-
